Refactoring with sonarqube suggestions.